<resources>
    <string name="app_name">Câmara Câmera</string>
    <string name="loading">Carregando...</string>

    <string name="boas_vindas">Boas-vindas!</string>
    <string name="button_login">Login</string>
    <string name="button_cadastro">Cadastro</string>

    <string name="title_login">Login</string>
    <string name="label_user_identification">E-mail</string>
    <string name="label_password">Senha</string>
    <string name="button_logar">Logar</string>
    <string name="button_nao_tenho_login">Fazer cadastro</string>

    <string name="title_cadastro">Cadastro</string>
    <string name="label_confirm_password">Confirmar senha</string>
    <string name="button_cadastrar">Cadastrar</string>
    <string name="button_ja_tenho_cadastro">Fazer login</string>

    <string name="title_partidos">Partidos</string>

    <string name="title_config">Configurações</string>

    <string name="button_deputados_do_partido">Deputados</string>

    <string name="button_voltar">Voltar</string>

    <string name="button_logout">Sair</string>
</resources>